# dwarf3

./: .gitignore  LICENSE  README.md  environment.yaml  pyproject.toml  requirements.txt
docs/: METHODS.md
scripts/: process_M31.sh  process_M43.sh  process_M45.sh  process_all.sh  process_session.py
src/dwarf3/: __init__.py  __main__.py  align.py  backend.py  cache.py  cli.py  cli_output.py  color.py  colormap.py  config.py  debayer.py  io.py  processing.py  quality.py  report.py  stack.py  utils.py
tests/: __init__.py  conftest.py  test_align.py  test_backend.py  test_debayer.py  test_stack.py
