[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dwarf3"
version = "0.1.0"
description = "Reproducible stacking pipeline for DWARF 3 smart telescope FITS acquisitions"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Olivier Vitrac", email = "olivier.vitrac@gmail.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
keywords = ["astrophotography", "FITS", "stacking", "DWARF3", "telescope"]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
    "astropy>=5.3",
    "photutils>=1.9",
    "scikit-image>=0.21",
    "reproject>=0.10",
    "tqdm>=4.66",
    "astroalign>=2.4",
    "imageio>=2.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "black>=23.0",
    "isort>=5.12",
]

[project.scripts]
dwarf3 = "dwarf3.cli:main"

[project.urls]
Homepage = "https://github.com/ovitrac/dwarf3"
Repository = "https://github.com/ovitrac/dwarf3"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
